--- a/static/css/search.css
+++ b/static/css/search.css
@@ -4,36 +4,23 @@
 
 }
 .noresult{
-    border: 1px solid lightgray;
-    border-radius: 20px;
-    padding: 5%;
     margin-top: 7%;
-    width: 70%;
-    margin-left: 9%;
 }
 .noresult button{
-    width: 18%;
-}
-
-.count_item{
-     text-align: left;
-     margin-left: 3%;
+    margin: 2%;
+    width: 7%;
 }
 
 .count {
-    text-align: left;
-    margin-left: 3%;
-
-
+    margin: 3%;
+    font-weight: bold;
 }
 
 .wrap {
-    margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
-    width: 1300px;
-    justify-content: flex-start;
-    margin-left: 1.3%;
+    justify-content: center;
+    margin: 0 7%;
 }
 
 .box {
@@ -57,8 +44,9 @@
 }
 
 .box img {
-    width: 260px;
-    height: 100%;
+    max-width: 300px;
+    max-height: 300px;
+    object-fit: cover;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     cursor: pointer;
