--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -22,7 +22,7 @@ search
 
     {% if error %}
         <div class = 'noresult_wrap'>
-        <p class ='count_item'>{{ all }} items</p>
+        <p class ='count'>{{ all }} items</p>
         <div class='noresult'>
          <h1>No items found for this search</h1>
          <button  onclick="location.href='/'">Back to main</button>
@@ -39,7 +39,7 @@ search
          {% for drawing in page_obj %}
         <article id="content" class = 'box' >
                 <img src="{{ drawing.img }}" alt="이미지" onclick="location.href='/detail/{{ drawing.owner.pk }}/{{ drawing.pk }}'">
-            <div class = 'post'onclick="location.href='/seller/{{ drawing.owner.pk }}'">
+            <footer class = 'post'onclick="location.href='/seller/{{ drawing.owner.pk }}'">
 
                 <div class = 'post_left'>
                     <img src="{{ drawing.owner.img }}" class='profile_aa'>
@@ -52,7 +52,7 @@ search
                 <div class = 'post_right'>
                     <p>{{ drawing.buy_price }} point</p>
                 </div>
-            </div>
+            </footer>
         </article>
         {% endfor %}
     </div>
@@ -99,7 +99,7 @@ window.onscroll = function() {
             setTimeout(()=>{content.innerHTML += data.map(
             	obj=>`<article id="content" class = 'box' >
                 <img src="${obj.img}" alt="이미지" onclick="location.href='/detail/${obj.owner_pk}/${obj.pk}'">
-            <div class = 'post' onclick="location.href='/seller/${obj.owner_pk}'">
+            <footer class = 'post' onclick="location.href='/seller/${obj.owner_pk}'">
                 <div class = 'post_left'>
                     <img src="${obj.proimg}" class='profile_aa'>
                     <div>
@@ -110,7 +110,7 @@ window.onscroll = function() {
                 <div class = 'post_right'>
                     <p>${obj.buy_price} point</p>
                 </div>
-            </div>
+            </footer>
         </article>`
             	).join("\n")},300)
         }).catch(err => {
