update - css 수정

--- a/templates/user/sign_up.html
+++ b/templates/user/sign_up.html
@@ -34,10 +34,10 @@
                 <input name="email" autocomplete="off" required>
                 <div class="label_wrapper"><label for="password">Password</label></div>
 
-                <input type="password" name="password" autocomplete="off" required>
+                <input type="password" name="password" autocomplete="off" required placeholder="특수 문자 포함 8글자 이상 입력해 주세요">
                 <div class="label_wrapper"><label for="password2">Re-enter Password</label></div>
 
-                <input type="password" name="password2" autocomplete="off" required>
+                <input type="password" name="password2" autocomplete="off" required placeholder="한 번 더 입력해 주세요">
                 <div class="label_wrapper"><label for="Nickname">Nickname</label></div>
 
                 <input name="nickname" autocomplete="off" required>
